--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
-	<groupId>ru.mikhail</groupId>
-	<artifactId>springboot</artifactId>
+	<groupId>springboot</groupId>
+	<artifactId>springbootdemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SpringBootApp</name>
 	<description>Demo project for Spring Boot</description>
